added good example to test site

--- a/WAI-ARIA tests/Picture.html
+++ b/WAI-ARIA tests/Picture.html
@@ -18,6 +18,15 @@
 
     <!-- Image with unhelpful alt text -->
     <img src="stockvault-christmas-tree191234.jpg" width="400" alt="Image">
+
+    <h1>Good Example: Proper Alt Text Usage</h1>
+
+    <!-- Image with descriptive alt text -->
+    <img src="stockvault-christmas-tree191234.jpg"
+        alt="Decorated Christmas tree with various ornaments and lights stands in a warmly lit room">
+
+    <!-- Decorative image with empty alt attribute -->
+    <img src="moroccan-flower.png" alt="" aria-hidden="true">
 </body>
 
 </html>
