--- a/WAI-ARIA tests/Accordion.html
+++ b/WAI-ARIA tests/Accordion.html
@@ -9,34 +9,7 @@
 <body>
 
   <main>
-    <h1 id="page-title">Accordion with ARIA</h1>
-    <div class="accordion" id="accordionExampleOne">
-      <div class="accordion-item">
-
-
-        <button 
-          class="accordion-button" 
-          type="button"
-          id="headingOne"
-          aria-controls="collapseOne"
-          aria-expanded="false">
-          Accordion Item #1
-        </button>
-
-        <div 
-          class="accordion-collapse collapse" 
-          id="collapseOne"
-          aria-labelledby="headingOne">
-          <p tabindex="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-            consequat, justo in dapibus cursus.</p>
-        </div>
-
-
-
-      </div>
-    </div>
-
-    <h1 id="page-title">Accordion without ARIA</h1>
+    <h1 id="page-title">Accordion utan ARIA</h1>
     <div class="accordion" id="accordionExampleTwo">
       <div class="accordion-item">
 
@@ -58,6 +31,41 @@
 
       </div>
     </div>
+
+
+    <style>
+      .accordion {
+          margin-bottom: 1000px; /* Adds space between accordions */
+      }
+  </style>
+
+
+
+    <h1 id="page-title" tabindex="0">Accordion med ARIA</h1>
+    <div class="accordion" id="accordionExampleOne">
+      <div class="accordion-item">
+
+
+        <button 
+          class="accordion-button" 
+          type="button"
+          id="headingOne"
+          aria-controls="collapseOne"
+          aria-expanded="false">
+          Accordion Item #1
+        </button>
+
+        <div 
+          class="accordion-collapse collapse" 
+          id="collapseOne"
+          aria-labelledby="headingOne">
+          <p tabindex="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+            consequat, justo in dapibus cursus.</p>
+        </div>
+      </div>
+    </div>
+
+    
   </main> 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
